--- a/team-project2/AUTHORS
+++ b/team-project2/AUTHORS
@@ -2,4 +2,4 @@
 # For how it is generated, see `hack/generate-authors.sh`.
 
 Naomi Kleinhans <naomikleinhans56@gmail.com>
-Esmeralda Kok <>
+Esmeralda Kok <esykok@gmail.com>
